centered items add some styling to title and some hover effect to btn

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!-- <script src="path/to/p5.sound.js"></script> -->
   </head>
   <body>
-    <div class="game-intro">
-      <h1 id="title">Bouncing Ball</h1>
-      <!-- <button id="button">Play game</button> -->
+    <div id="game-content" class="hidden">
+      <div class="game-intro">
+        <h1 id="title">Bouncing Ball</h1>
+        <!-- <button id="start-button">Play game</button> -->
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
